Take new version of dcicutils, eliminating need to host the check_true function. Also means we're using a version of dcicutils whose tests are passing. And fix a problem in ingestion processing where it was overly strict about looking for an ingestion_type.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ chardet = "3.0.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
 dcicsnovault = ">=3.1.9,<4"  # Fixes build problems in 3.1.8
-dcicutils = ">=0.38.0,<1"  # has the LockoutManager needed for Snovault
+dcicutils = ">=0.38.1,<1"  # has LockoutManager 0.38.0 and check_true 0.38.1
 docutils = "0.12"
 elasticsearch = "5.5.3"
 elasticsearch-dsl = "^5.4.0"
