make sentry dsn configurable through EB

--- a/deploy/ini_files/cgapwolf.ini
+++ b/deploy/ini_files/cgapwolf.ini
@@ -5,6 +5,7 @@ file_upload_bucket = elasticbeanstalk-fourfront-cgapwolf-files
 file_wfout_bucket = elasticbeanstalk-fourfront-cgapwolf-wfoutput
 blob_bucket = elasticbeanstalk-fourfront-cgapwolf-blobs
 system_bucket = elasticbeanstalk-fourfront-cgapwolf-system
+sentry_dsn = ${SENTRY_DSN}
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = search-fourfront-cgapwolf-r5kkbokabymtguuwjzspt2kiqa.us-east-1.es.amazonaws.com:80
