--- a/deploy/ini_files/cgap.ini
+++ b/deploy/ini_files/cgap.ini
@@ -5,6 +5,7 @@ file_upload_bucket = elasticbeanstalk-fourfront-cgap-files
 file_wfout_bucket = elasticbeanstalk-fourfront-cgap-wfoutput
 blob_bucket = elasticbeanstalk-fourfront-cgap-blobs
 system_bucket = elasticbeanstalk-fourfront-cgap-system
+sentry_dsn = ${SENTRY_DSN}
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = search-fourfront-cgap-ewf7r7u2nq3xkgyozdhns4bkni.us-east-1.es.amazonaws.com:80
