--- a/deploy/ini_files/cgapdev.ini
+++ b/deploy/ini_files/cgapdev.ini
@@ -5,6 +5,7 @@ file_upload_bucket = elasticbeanstalk-fourfront-cgapdev-files
 file_wfout_bucket = elasticbeanstalk-fourfront-cgapdev-wfoutput
 blob_bucket = elasticbeanstalk-fourfront-cgapdev-blobs
 system_bucket = elasticbeanstalk-fourfront-cgapdev-system
+sentry_dsn = ${SENTRY_DSN}
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = search-fourfront-cgapdev-gnv2sgdngkjbcemdadmaoxcsae.us-east-1.es.amazonaws.com:80
