--- a/deploy/ini_files/cgaptest.ini
+++ b/deploy/ini_files/cgaptest.ini
@@ -5,6 +5,7 @@ file_upload_bucket = elasticbeanstalk-fourfront-cgaptest-files
 file_wfout_bucket = elasticbeanstalk-fourfront-cgaptest-wfoutput
 blob_bucket = elasticbeanstalk-fourfront-cgaptest-blobs
 system_bucket = elasticbeanstalk-fourfront-cgaptest-system
+sentry_dsn = ${SENTRY_DSN}
 # blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = search-fourfront-cgaptest-dxiczz2zv7f3nshshvevcvmpmy.us-east-1.es.amazonaws.com:80
