--- a/.github/workflows/cypress-tests-production.yml
+++ b/.github/workflows/cypress-tests-production.yml
@@ -42,5 +42,5 @@ jobs:
           Auth0Client: ${{ secrets.Auth0Client }}
           Auth0Secret: ${{ secrets.Auth0Secret }}
         run: |
-         $(npm bin)/cypress run --record --key $CYPRESS_KEY --env Auth0Client=$Auth0Client,Auth0Secret=$Auth0Secret --project ./deploy/post_deploy_testing --browser chrome --config baseUrl=https://cgap.hms.harvard.edu/ --parallel
+         $(npm bin)/cypress run --record --key $CYPRESS_KEY --env Auth0Client=$Auth0Client,Auth0Secret=$Auth0Secret --project ./deploy/post_deploy_testing --browser chrome --config baseUrl=https://cgap-mgb.hms.harvard.edu/ --parallel
 
