--- a/pyproject.toml
+++ b/pyproject.toml
@@ -187,6 +187,7 @@ import-data = "encoded.commands.import_data:main"
 jsonld-rdf = "encoded.commands.jsonld_rdf:main"
 load-access-keys = "encoded.commands.load_access_keys:main"
 load-data = "encoded.commands.load_data:main"
+load-data-by-type = "encoded.commands.load_data_by_type:main"
 load-items = "encoded.commands.load_items:main"
 make-submission-access-key = "encoded.commands.make_submission_access_key:main"
 migrate-attachments-aws = "encoded.commands.migrate_attachments_aws:main"
