--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "node --max-old-space-size=2048 ./node_modules/.bin/gulp build",
     "build-quick": "gulp build-quick",
     "build-scss": "gulp build-scss",
-    "watch-scss": "gulp build-scss-dev && sass ./src/encoded/static/scss/style.scss ./src/encoded/static/css/style.css --watch --style expanded --no-verbose",
+    "watch-scss": "gulp build-scss-dev && sass ./src/encoded/static/scss/style.scss ./src/encoded/static/css/style.css --watch --style expanded --no-verbose --quiet-deps",
     "watch-scss-print": "gulp build-scss-dev && sass ./src/encoded/static/scss/print.scss ./src/encoded/static/css/print.css --watch --style expanded --no-verbose",
     "dev-quick": "gulp dev-quick --preserve-symlinks",
     "dev-analyzed": "gulp dev-analyzed --preserve-symlinks",
@@ -38,7 +38,7 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "plugin-error": "^1.0.1",
-    "sass": "^1.49.9",
+    "sass": "^1.51.0",
     "sinon": "^1.17.6",
     "source-map-support": "^0.5.19",
     "string-replace-loader": "^2.3.0",
@@ -50,7 +50,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
-    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.45",
+    "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.46",
     "auth0-lock": "^11.32.2",
     "d3": "^5.16.0",
     "detect-browser": "^3.0.1",
