--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,14 +36,14 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.8"
+python = ">=3.7.1,<3.9"
 boto3 = "^1.21.5"
 botocore = "^1.24.5"
 certifi = ">=2021.5.30"
 chardet = "3.0.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
-dcicsnovault = "^5.5.0"
+dcicsnovault = "^5.6.0.1b0"
 dcicutils = "^3.9.0"
 elasticsearch = "6.8.1"
 execnet = "1.4.1"
