--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,14 +36,15 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.8"
+#python = ">=3.7.1,<3.8"
+python = ">=3.7.1,<3.9"
 boto3 = "^1.21.5"
 botocore = "^1.24.5"
 certifi = ">=2021.5.30"
 chardet = "3.0.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
-dcicsnovault = "^5.4.0"
+dcicsnovault = "5.6.0.1b0"
 dcicutils = "^3.9.0"
 elasticsearch = "6.8.1"
 execnet = "1.4.1"
@@ -61,7 +62,7 @@ keepalive = "0.5"
 loremipsum = "1.0.5"
 netaddr = ">=0.8.0,<1"
 negspy = "0.2.24"
-numpy = "1.19.1" # negspy needs it
+numpy = "1.20.3" # negspy needs it
 openpyxl = "^3.0.7,!=3.0.8"  # a version 3.0.8 appeared but then got withdrawn, for now just pin 3.0.7. try again later.
 passlib = "^1.7.4"
 PasteDeploy = "1.5.2"
