--- a/deploy/docker/production/cgap_any_alpha.ini
+++ b/deploy/docker/production/cgap_any_alpha.ini
@@ -19,6 +19,8 @@ s3_encrypt_key_id = ${S3_ENCRYPT_KEY_ID}
 accession_factory = encoded.server_defaults.enc_accession
 elasticsearch.server = ${ES_SERVER}
 snovault.app_version = ask-pip
+env.bucket = ${GLOBAL_ENV_BUCKET}
+env.ecosystem = ${ECOSYSTEM}
 env.name = ${BS_ENV}
 mirror.env.name = ${BS_MIRROR_ENV}
 encoded_version = ${PROJECT_VERSION}
