--- a/test.ini
+++ b/test.ini
@@ -4,7 +4,7 @@ session.secret = superlegitrealsecret
 file_upload_bucket = elasticbeanstalk-encoded-4dn-files
 blob_bucket = elasticbeanstalk-encoded-4dn-blobs
 metadata_bundles_bucket = elasticbeanstalk-fourfront-cgaplocal-test-metadata-bundles
-#blob_store_profile_name = encoded-4dn-files
+# blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.test_accession
 elasticsearch.server = 172.31.49.128:9872
 snovault.app_version = 1.3.0
@@ -15,6 +15,9 @@ utils_version = 333.444.555
 eb_app_version = app-v-test-simulation
 create_tables = true
 load_test_data = encoded.loadxl:load_test_data
+# env.bucket = ...
+# env.ecosystem= ...
+# env.name = ...
 
 [composite:indexer]
 use = config:base.ini#indexer
