--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ chardet = "3.0.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
 dcicsnovault = "5.6.0.1b0"
-dcicutils = "^3.9.0"
+# dcicutils = "^3.9.0"
+dcicutils = "3.13.0.2b27"
 elasticsearch = "6.8.1"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
