Modify lifecycle_policy schema for project

--- a/src/encoded/schemas/project.json
+++ b/src/encoded/schemas/project.json
@@ -117,11 +117,11 @@
             "title": "Lifecycle policy",
             "description": "Contains rules how different categories of files are managed during their lifetime.",
             "type": "object",
-            "additionalProperties": false,
+            "additionalProperties": true,
             "properties": {
-                "result": {
-                    "title": "Result files",
-                    "description": "Rules for result file (e.g. BAM files)",
+                "short_term_access_long_term_archive": {
+                    "title": "short_term_access_long_term_archive",
+                    "description": "Files that require shorter term accessibility and are long term archived after that",
                     "type": "object",
                     "required": [
                         "expire_after"
@@ -131,6 +131,11 @@
                         "move_to_infrequent_access_after": {
                             "title": "Move to Infrequent Access after",
                             "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
                             "type": "integer"
                         },
                         "move_to_deep_archive_after": {
@@ -145,9 +150,9 @@
                         }
                     }
                 },
-                "persistent_result": {
-                    "title": "Result files (long term availability)",
-                    "description": "Rules for result files that need to be accessible long term (e.g. Bamsnaps)",
+                "long_term_access_long_term_archive": {
+                    "title": "long_term_access_long_term_archive",
+                    "description": "Files that require longer term accessibility and are long term archived after that",
                     "type": "object",
                     "required": [
                         "expire_after"
@@ -157,6 +162,11 @@
                         "move_to_infrequent_access_after": {
                             "title": "Move to Infrequent Access after",
                             "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
                             "type": "integer"
                         },
                         "move_to_deep_archive_after": {
@@ -171,9 +181,9 @@
                         }
                     }
                 },
-                "reads": {
-                    "title": "Read files",
-                    "description": "Input read files in fastq or cram format",
+                "long_term_access": {
+                    "title": "long_term_access",
+                    "description": "Files that require long term accessibility and are deleted after that",
                     "type": "object",
                     "required": [
                         "expire_after"
@@ -183,6 +193,11 @@
                         "move_to_infrequent_access_after": {
                             "title": "Move to Infrequent Access after",
                             "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
                             "type": "integer"
                         },
                         "move_to_deep_archive_after": {
@@ -197,9 +212,9 @@
                         }
                     }
                 },
-                "intermediate_output": {
-                    "title": "Intermediate output files",
-                    "description": "Intermediate output files (e.g. intermediate BAM files)",
+                "short_term_access": {
+                    "title": "short_term_access",
+                    "description": "Files that require short term accessibility and are deleted after that",
                     "type": "object",
                     "required": [
                         "expire_after"
@@ -209,6 +224,11 @@
                         "move_to_infrequent_access_after": {
                             "title": "Move to Infrequent Access after",
                             "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
                             "type": "integer"
                         },
                         "move_to_deep_archive_after": {
@@ -223,9 +243,9 @@
                         }
                     }
                 },
-                "intermediate_result": {
-                    "title": "Intermediate result files",
-                    "description": "Intermediate result files (e.g. gvcf, rck.tar files)",
+                "long_term_archive": {
+                    "title": "long_term_archive",
+                    "description": "Files that are immediately archived long term and deleted after that",
                     "type": "object",
                     "required": [
                         "expire_after"
@@ -235,6 +255,73 @@
                         "move_to_infrequent_access_after": {
                             "title": "Move to Infrequent Access after",
                             "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "short_term_archive": {
+                    "title": "short_term_archive",
+                    "description": "Files that are immediately archived short term and deleted after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "no_storage": {
+                    "title": "no_storage",
+                    "description": "Files that are deleted immediately",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
                             "type": "integer"
                         },
                         "move_to_deep_archive_after": {
