--- a/src/encoded/schemas/project.json
+++ b/src/encoded/schemas/project.json
@@ -117,7 +117,36 @@
             "title": "Lifecycle policy",
             "description": "Contains rules how different categories of files are managed during their lifetime.",
             "type": "object",
-            "additionalProperties": true,
+            "additionalProperties": {
+                "type": "object",
+                "description": "Custom lifecycle policy",
+                "comment": "Ensure custom lifecycle policies have the right structure",
+                "required": [
+                    "expire_after"
+                ],
+                "properties": {
+                    "move_to_infrequent_access_after": {
+                        "title": "Move to Infrequent Access after",
+                        "description": "Time (in months) after which files are moved to Infrequent Access",
+                        "type": "integer"
+                    },
+                    "move_to_glacier_after": {
+                        "title": "Move to Glacier Instant Retrieval after",
+                        "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                        "type": "integer"
+                    },
+                    "move_to_deep_archive_after": {
+                        "title": "Move to Deep Archive after",
+                        "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                        "type": "integer"
+                    },
+                    "expire_after": {
+                        "title": "Expire after",
+                        "description": "Time (in months) after which files are deleted",
+                        "type": "integer"
+                    }
+                }
+            },
             "properties": {
                 "short_term_access_long_term_archive": {
                     "title": "short_term_access_long_term_archive",
