--- a/deploy/docker/production/nginx.conf
+++ b/deploy/docker/production/nginx.conf
@@ -36,6 +36,10 @@ http {
     types_hash_max_size 2048;
     types_hash_bucket_size 64;
 
+    # If 502 is encountered, we may have been killed for memory
+    # fall back to the next server, until one is back
+    proxy_next_upstream error timeout http_502;
+
     # Allow large POST requests
     client_body_buffer_size 128K;
     client_header_buffer_size 1k;
@@ -66,7 +70,7 @@ http {
         server 0.0.0.0:6544 fail_timeout=45;
         server 0.0.0.0:6545 fail_timeout=45;
         server 0.0.0.0:6546 fail_timeout=45;
-        server 0.0.0.0:6547 fail_timeout=45;
+        server 0.0.0.0:6547 fail_timeout=45 backup;
         keepalive 64;
     }
 
