Schema changes for Lifecycle management

--- a/src/encoded/schemas/project.json
+++ b/src/encoded/schemas/project.json
@@ -112,6 +112,260 @@
             "type": "string",
             "lookup": 80,
             "linkTo": "User"
+        },
+        "lifecycle_policy": {
+            "title": "Lifecycle policy",
+            "description": "Contains rules how different categories of files are managed during their lifetime.",
+            "type": "object",
+            "additionalProperties": {
+                "type": "object",
+                "description": "Custom lifecycle policy",
+                "comment": "Ensure custom lifecycle policies have the right structure",
+                "required": [
+                    "expire_after"
+                ],
+                "properties": {
+                    "move_to_infrequent_access_after": {
+                        "title": "Move to Infrequent Access after",
+                        "description": "Time (in months) after which files are moved to Infrequent Access",
+                        "type": "integer"
+                    },
+                    "move_to_glacier_after": {
+                        "title": "Move to Glacier Instant Retrieval after",
+                        "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                        "type": "integer"
+                    },
+                    "move_to_deep_archive_after": {
+                        "title": "Move to Deep Archive after",
+                        "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                        "type": "integer"
+                    },
+                    "expire_after": {
+                        "title": "Expire after",
+                        "description": "Time (in months) after which files are deleted",
+                        "type": "integer"
+                    }
+                }
+            },
+            "properties": {
+                "short_term_access_long_term_archive": {
+                    "title": "short_term_access_long_term_archive",
+                    "description": "Files that require shorter term accessibility and are long term archived after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "long_term_access_long_term_archive": {
+                    "title": "long_term_access_long_term_archive",
+                    "description": "Files that require longer term accessibility and are long term archived after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "long_term_access": {
+                    "title": "long_term_access",
+                    "description": "Files that require long term accessibility and are deleted after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "short_term_access": {
+                    "title": "short_term_access",
+                    "description": "Files that require short term accessibility and are deleted after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "long_term_archive": {
+                    "title": "long_term_archive",
+                    "description": "Files that are immediately archived long term and deleted after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "short_term_archive": {
+                    "title": "short_term_archive",
+                    "description": "Files that are immediately archived short term and deleted after that",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                },
+                "no_storage": {
+                    "title": "no_storage",
+                    "description": "Files that are deleted immediately",
+                    "type": "object",
+                    "required": [
+                        "expire_after"
+                    ],
+                    "additionalProperties": false,
+                    "properties": {
+                        "move_to_infrequent_access_after": {
+                            "title": "Move to Infrequent Access after",
+                            "description": "Time (in months) after which files are moved to Infrequent Access",
+                            "type": "integer"
+                        },
+                        "move_to_glacier_after": {
+                            "title": "Move to Glacier Instant Retrieval after",
+                            "description": "Time (in months) after which files are moved to Glacier Instant Retrieval",
+                            "type": "integer"
+                        },
+                        "move_to_deep_archive_after": {
+                            "title": "Move to Deep Archive after",
+                            "description": "Time (in months) after which files are moved to Glacier Deep Archive",
+                            "type": "integer"
+                        },
+                        "expire_after": {
+                            "title": "Expire after",
+                            "description": "Time (in months) after which files are deleted",
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
         }
     }
 }
